added LinkedIn link

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
         <div class="credit-container">
           <img class="avatar-img" src="./images/IMG_3295.jpg" />
-          <p class="soft-blue">Creation of <span class="hover">Ninos Dinkha</span></p>
+          <p class="soft-blue">Creation of <a href="https://www.linkedin.com/in/ninosdinkha/" target="_blank" class="hover">Ninos Dinkha</a></p>
         </div>
       </div>
     </section>
